k8s/base/event-collector/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-collector
  labels:
    app: event-collector
spec:
  type: ClusterIP
  selector:
    app: event-collector
  ports:
    - name: http
      port: 8000
      targetPort: http
